--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ Flask==0.10.1
 Jinja2==2.7.2
 MarkupSafe==0.21
 Werkzeug==0.9.4
+beautifulsoup4==4.3.2
+boto==2.28.0
 gunicorn==18.0
 itsdangerous==0.24
 requests==2.2.1
 wsgiref==0.1.2
-beautifulsoup4 >= 4
