--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: python
 python:
   - "2.7"
-# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -r requirements.txt --use-mirrors
-# command to run tests, e.g. python setup.py test
+before_install: sudo apt-get install gdal-bin
+install: pip install -r requirements.txt
 script:  python tests.py
