Adding project monitor

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,5 @@ python:
 before_install: sudo apt-get install gdal-bin
 install: pip install -r requirements.txt
 script:  python tests.py
+notifications:
+  webhooks: http://project-monitor.codeforamerica.org/projects/6ee3ad02-a7ba-4f9d-aab5-fc4ce55a59d5/status
