--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: python
 python:
   - "2.7"
-before_install: sudo apt-get install python-gdal
+before_install: 
+  - sudo apt-get update -y
+  - sudo apt-get install gdal-bin
 install: pip install -r requirements.txt
 script:  python tests.py
 notifications:
