--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "2.7"
 before_install: 
   - sudo apt-get update -y
-  - sudo apt-get install gdal-bin
+  - sudo apt-get install -y gdal-bin
 install: pip install -r requirements.txt
 script:  python tests.py
 notifications:
